# typewire

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/scripts/: coverage-delta.py
.github/workflows/: ci.yml  coverage.yml  release-plz.yml
benches/: README.md
benches/wasm/: Cargo.toml  chart.js  package.json  run.js
benches/wasm/src/: lib.rs  perf.rs
docs/: guide.md
examples/chat-app/: CLAUDE.md  Cargo.toml  README.md  package.json  test.ts  types.d.ts
examples/chat-app/src/: lib.rs
examples/todo-app/: CLAUDE.md  Cargo.toml  README.md  package.json  test.mjs  test.ts  tsconfig.json  types.d.ts
examples/todo-app/src/: lib.rs
examples/todo-app/web/: App.tsx  index.html  main.tsx  store.ts  vite.config.ts
experiments/multivalue/: test_multivalue_import.mjs  test_multivalue_import.wasm  test_multivalue_import.wat  test_mv_bench2.mjs  test_mv_bench2.wasm  test_mv_bench2.wat
typewire/: CLAUDE.md  Cargo.toml
typewire-derive/: CLAUDE.md  Cargo.toml
typewire-derive/src/: attr.rs  case.rs  expand.rs  lib.rs  wasm.rs
typewire-schema/: CLAUDE.md  Cargo.toml
typewire-schema/src/: coded.rs  decode.rs  encode.rs  lib.rs  scalar.rs  typescript.rs
typewire-schema/tests/: roundtrip.rs
typewire/src/: bin.rs  error.rs  lib.rs
typewire/tests/: compile_tests.rs  schema_integration.rs  wasm_compound.rs  wasm_derive_attrs.rs  wasm_derive_enums.rs  wasm_derive_structs.rs  wasm_errors.rs  wasm_generics.rs  wasm_indexmap_indexset.rs  wasm_lenient.rs  wasm_patch_js.rs  wasm_patch_js_collections.rs  wasm_primitives.rs  wasm_serde_json_value.rs
typewire/tests/common/: mod.rs
typewire/tests/compile_fail/: content_without_tag.rs  content_without_tag.stderr  from_and_try_from.rs  from_and_try_from.stderr  generic_missing_typewire_bound.rs  generic_missing_typewire_bound.stderr  internal_tag_multi_tuple.rs  internal_tag_multi_tuple.stderr  tag_and_untagged.rs  tag_and_untagged.stderr  transparent_empty.rs  transparent_empty.stderr  transparent_enum.rs  transparent_enum.stderr  transparent_multi_named.rs  transparent_multi_named.stderr  transparent_multi_tuple.rs  transparent_multi_tuple.stderr  union.rs  union.stderr
xtask/: CLAUDE.md  Cargo.toml
xtask/src/: bench.rs  coverage.rs  main.rs  wasm.rs
