[workspace]
members = [
  "typewire",
  "typewire-derive",
  "typewire-schema",
  "xtask",
  "examples/*",
  "benches/wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
js-sys = "0.3.94"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing", "proc-macro"] }
thiserror = "2"
wasm-bindgen = "0.2.117"
wasm-bindgen-test = "0.3.67"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
too_many_lines = "allow"
