[package]
name = "typewire-derive"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "Derive macros for the typewire crate"
repository = "https://github.com/uael/typewire"
homepage = "https://github.com/uael/typewire"
documentation = "https://docs.rs/typewire-derive"
readme = "../README.md"

[features]
schemas = []

[lib]
proc-macro = true

[dependencies]
typewire-schema = { version = "0.0.2", path = "../typewire-schema", features = ["encode"] }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "proc-macro"] }

[lints]
workspace = true
