[package]
name = "typewire-derive"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "Derive macros for the typewire crate"
repository = "https://github.com/uael/typewire"
homepage = "https://github.com/uael/typewire"
documentation = "https://docs.rs/typewire-derive"
readme = "../README.md"

[features]
schemas = []

[lib]
proc-macro = true

[dependencies]
typewire-schema = { version = "=0.0.4", path = "../typewire-schema", features = ["encode"] }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
