[package]
name = "typewire-schema"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "Schema types for the typewire crate"
repository = "https://github.com/uael/typewire"
homepage = "https://github.com/uael/typewire"
documentation = "https://docs.rs/typewire-schema"
readme = "../README.md"

[features]
default = []
encode = ["dep:syn", "dep:quote", "dep:proc-macro2"]
decode = ["dep:thiserror"]
typescript = ["decode"]

[dependencies]
bitflags = "2"
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2", features = ["full", "parsing", "proc-macro"], optional = true }
thiserror = { version = "2", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[package.metadata.docs.rs]
# encode and decode are mutually exclusive — use typescript (implies decode)
# to document the user-facing API.
features = ["typescript"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
