[package]
name = "typewire"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "TODO"
repository = "https://github.com/uael/typewire"
homepage = "https://github.com/uael/typewire"
documentation = "https://docs.rs/typewire"
readme = "../README.md"

[features]
default = ["derive"]
derive = ["dep:typewire-derive"]
uuid = ["dep:uuid"]
fractional_index = ["dep:fractional_index"]
chrono = ["dep:chrono"]
url = ["dep:url"]
indexmap = ["dep:indexmap"]
bytes = ["dep:bytes"]
base64 = ["dep:base64"]
serde_json = ["dep:serde_json"]
cli = ["dep:clap", "dep:object", "dep:walrus", "typewire-schema/typescript"]

[[bin]]
name = "typewire"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
typewire-derive = { version = "=0.0.1", path = "../typewire-derive", optional = true }
typewire-schema = { version = "=0.0.1", path = "../typewire-schema" }
clap = { version = "4", features = ["derive"], optional = true }
object = { version = "0.39", features = ["read", "wasm"], optional = true }
walrus = { version = "0.26", optional = true }
thiserror = "2"
uuid = { version = "1.4", features = ["v4", "serde", "fast-rng"], optional = true }
fractional_index = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
url = { version = "2", optional = true }
indexmap = { version = "2", optional = true }
bytes = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = { version = "1.0", optional = true }
similar = { version = "2.6", features = ["wasm32_web_time"] }
log = { version = "0.4", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.90"

[dev-dependencies]
trybuild = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2"
typewire = { version = "=0.0.1", path = ".", features = ["base64", "serde_json", "indexmap"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.64"
js-sys = "0.3.90"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
