[package]
name = "typewire"
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
description = "Derive-based cross-language type bridging with compile-time schema embedding and multi-target codegen"
repository = "https://github.com/uael/typewire"
homepage = "https://github.com/uael/typewire"
documentation = "https://docs.rs/typewire"
readme = "../README.md"

# Keep this feature list in sync with xtask/src/main.rs (TYPE_FEATURES).
[features]
default = ["derive"]
derive = ["dep:typewire-derive"]
schemas = ["typewire-derive?/schemas"]
uuid = ["dep:uuid"]
fractional_index = ["dep:fractional_index"]
chrono = ["dep:chrono"]
url = ["dep:url"]
indexmap = ["dep:indexmap"]
bytes = ["dep:bytes"]
base64 = ["dep:base64"]
serde_json = ["dep:serde_json"]
cli = ["dep:clap", "dep:object", "dep:walrus", "typewire-schema/typescript"]

[[bin]]
name = "typewire"
path = "src/bin.rs"
required-features = ["cli"]


[dependencies]
typewire-derive = { version = "=0.0.4", path = "../typewire-derive", optional = true }
typewire-schema = { version = "=0.0.4", path = "../typewire-schema" }
clap = { workspace = true, optional = true }
object = { version = "0.39", features = ["read", "wasm"], optional = true }
walrus = { version = "0.26", optional = true }
thiserror.workspace = true
uuid = { version = "1.4", features = ["v4", "serde", "fast-rng"], optional = true }
fractional_index = { version = "2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
url = { version = "2", optional = true }
indexmap = { version = "2", optional = true }
bytes = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
serde_json = { workspace = true, optional = true }
similar = { version = "2.6", features = ["wasm32_web_time"] }
log = { version = "0.4", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
uuid = { version = "1.4", features = ["js"], optional = true }

[dev-dependencies]
trybuild = "1"
serde.workspace = true
serde_json.workspace = true
indexmap = "2"
typewire = { path = ".", features = ["base64", "serde_json", "indexmap"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-test.workspace = true
js-sys.workspace = true

[package.metadata.docs.rs]
# cli conflicts with derive (both pull typewire-schema with mutually exclusive
# encode/decode features), so list features explicitly.
features = ["derive", "schemas", "uuid", "fractional_index", "chrono", "url", "indexmap", "bytes", "base64", "serde_json"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
