[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license = "MIT"
publish = false

[lints.rust]
missing_docs = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
clap-cargo = { version = "0.18" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xshell = "0.3.0-pre.2"

[dev-dependencies]
tempfile = "3"
