[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license = "MIT"
publish = false

[lints.rust]
missing_docs = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1"
bitflags.workspace = true
clap.workspace = true
clap-cargo = { version = "0.18" }
flate2 = "1"
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
wasm-bindgen-cli-support = "0.2.117"
xshell = "0.3.0-pre.2"
