[package]
name = "todo-app"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
typewire = { path = "../../typewire", features = ["schemas", "base64", "serde_json"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3.90"

[lints]
workspace = true
